--- a/templates/partials/head.html
+++ b/templates/partials/head.html
@@ -1,2 +1,3 @@
 <title>${title}</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="/css/styles.css">
